archivo render.yaml actualizado

--- a/src/render.yaml
+++ b/src/render.yaml
@@ -1,25 +1,14 @@
-<<<<<<< HEAD
 services:
   - type: web
-    name: app-muertes-colombia
-    runtime: python
-    repo: https://github.com/Diana1295Dev/App_muertesColombia.git
-    branch: main
+    name: dash-app
+    env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn src.app:server
+    startCommand: gunicorn app:server
     envVars:
-      - key: PORT
-        value: 10000
-=======
-services:
-  - type: web
-    name: app-muertes-colombia
-    runtime: python
-    repo: https://github.com/Diana1295Dev/App_muertesColombia.git
-    branch: main
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn src.app:server
-    envVars:
-      - key: PORT
-        value: 10000
->>>>>>> 20194a093782c050b4f4fe71c906e86156e3af6c
+      - name: DASH_APP
+        value: dash-app
+      - name: DASH_ENV
+        value: production
+      - name: DASH_PORT
+        value: 8050
+      - name: DASH_HOST  
